Adding Document Preview Section (#19913)
* Display General Information

* Edit CMP modal

* adding new columns to correspondence documents

* initial seed for vbms_document_types

* removed a comment

* update vbms_doc_type spec

* add rspec and jest test cases

* remove commented line

* add missing seed files to seeds.rb

* typo in package_document_types seed

* fix correspondence query in controller

* updated correspondence_controller_spec

* moved jest test to correct directory

* moved ReviewForm.jsx to correct directory

* display correspondence documents

* Edit package save functionality

* fix the UI as per the figma

* validate veteran file no

* displaying document type on correspondence doc preview section

* updated corres doc seed

* remove console.log

* remove unused seed

* added comment to migration

* fix migration

* update schema.rb

* remove unused seed spec

* updated correspondence_document factory

* added jest tests and fixed wrong date display on cmp information

* remove console.log again

* remove unused state

* update table border color

* update static text for document table

* Review package page switch user dropdown fix

* Add new migration and modifies behavior in the model

* update veteran file no with numeric only

* fix test cases

* update documentt preview table styling

* add padding to columns

* cleanup .scss

* lint cleanup

* Code refactor in Correspondence controller

* Changed vbms_document_id to vbms_document_type_id

* small fix

* Updated value to int

* refactoring 29204

* change margin

* update correspondence document factory

* fix jest tests

* more jest test updates

* fixed schema.rb

* another schema update..

* lint fix for editModal.jsx

* fix table warnings

---------

Co-authored-by: Deepak <santhi.parakal@va.gov>
Co-authored-by: Kamala Madamanchi <kamala.madamanchi@va.gov>
Co-authored-by: Jon

--- a/app/views/correspondence/review_package.html.erb
+++ b/app/views/correspondence/review_package.html.erb
@@ -5,6 +5,8 @@
     userRole: (current_user.vacols_roles.first || "").capitalize,
     userCssId: current_user.css_id,
     organizations: current_user.selectable_organizations.map {|o| o.slice(:name, :url)},
+    caseSearchHomePage: case_search_home_page,
+    dropdownUrls: dropdown_urls,
     featureToggles: {
       correspondence_queue: FeatureToggle.enabled?(:correspondence_queue, user: current_user)
     }
